[project]
name = "ragproductionapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.1",
    "google-genai>=2.8.0",
    "inngest>=0.5.18",
    "llama-index-core>=0.14.22",
    "llama-index-readers-file>=0.6.0",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
